Allow partial income receipts
